--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "presets": [
       "env",
       "react"
-    ]
+    ],
+    "plugins": ["transform-class-properties"]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
